<?xml version="1.0" encoding="utf-8"?>
			<xkp.android.SimpleTest.XKPLayout 
				xmlns:android="http://schemas.android.com/apk/res/android" 
				xmlns:xkp="http://schemas.android.com/apk/res/xkp.android.SimpleTest" 
				android:id="@+id/application" 
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				xkp:placement="client"
			>
				<TextView android:id="@+id/lblFirstName"
				android:text="@string/res0"
				xkp:layout_x="10dp"
				xkp:layout_y="20dp"
				android:layout_width="140dp"
				android:layout_height="40dp"
			>
				</TextView>
				<EditText android:id="@+id/edtFirstName"
				android:hint="@string/res1"
				xkp:layout_x="120dp"
				xkp:layout_y="10dp"
				android:layout_width="160dp"
				android:layout_height="40dp"
			>
				</EditText>
				<TextView android:id="@+id/lblLastName"
				android:text="@string/res2"
				xkp:layout_x="10dp"
				xkp:layout_y="70dp"
				android:layout_width="140dp"
				android:layout_height="40dp"
			>
				</TextView>
				<EditText android:id="@+id/edtLastName"
				android:hint="@string/res3"
				xkp:layout_x="120dp"
				xkp:layout_y="60dp"
				android:layout_width="160dp"
				android:layout_height="40dp"
			>
				</EditText>
				<Button android:id="@+id/btnFullName"
				android:text="@string/res4"
				xkp:layout_x="40dp"
				xkp:layout_y="110dp"
				android:layout_width="200dp"
				android:layout_height="43dp"
			>
				</Button>
				<TextView android:id="@+id/lblFullName"
				android:text="@string/res5"
				xkp:layout_x="10dp"
				xkp:layout_y="170dp"
				android:layout_width="300dp"
				android:layout_height="25dp"
			>
				</TextView>
				<EditText android:id="@+id/edtContainer"
				android:hint="@string/res6"
				xkp:layout_x="10dp"
				xkp:layout_y="210dp"
				android:layout_width="300dp"
				android:layout_height="100dp"
				android:lines="6"
			>
				</EditText>
			</xkp.android.SimpleTest.XKPLayout>
